tests/NormalTests/paczka1/fuzzy1/77361083.err
Error in line 3: hHgL1CDUB S798 -1,5
Error in line 2: hHgL1CDUB S798 45,6
Error in line 11: N00 A776 70,9
Error in line 16: 3e0MSzf9 A776 46,4
Error in line 29: JTsqTlnb A776 16,9
Error in line 30: JTsqTlnb A486 91,9
